--- a/index.html
+++ b/index.html
@@ -5,19 +5,18 @@
 <title>GridR</title>
 <meta name="description" content="GridR. Create by Joshua George @ Made By Coffee" />
 <meta name="author" content="Joshua George http://madebycoffee.co.uk" />
-<link href="http://madebycoffee.co.uk/gridr/style.css" rel="stylesheet" type="text/css">
+<link href="http://ihateonions.uk/projects/gridr/style.css" rel="stylesheet" type="text/css">
 <link href="gridr.css" rel="stylesheet" type="text/css">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
 <meta name="viewport" content="initial-scale=1">
-<script src="http://cpanel.oitie.co.uk/click/display.php"></script> 
 </head>
 
 <body>
 
 <div class="header">
 <h1><a href="index.html">GridR</a></h1>
-<p>Thank you for downloading the GridR style sheet. I hope it all make sense. <a href="http://madebycoffee.co.uk/gridr/documentation">Documentation</a></p>
-<p>Create by <a href="http://madebycoffee.co.uk">Joshua George</a></p>
+<p>Thank you for downloading the GridR style sheet. I hope it all make sense. <a href="http://ihateonions.uk/projects/gridr/documentation">Documentation</a></p>
+<p>Create by <a href="http://ihateonions.uk">Joshua George</a></p>
 </div>
 
 
